--- a/nesta/styl/heatmap.styl
+++ b/nesta/styl/heatmap.styl
@@ -12,6 +12,9 @@
 
 	.vis__graph
 		&__cell
+			-webkit-transition transform .5s
+			transition transform .5s
+
 			&__bg
 				stroke none
 				fill #fff
