--- a/nesta/styl/bubblechart.styl
+++ b/nesta/styl/bubblechart.styl
@@ -2,3 +2,28 @@
 	.vis__graph
 		&__item
 			stroke none
+			opacity .5
+
+	.axis-label
+		fill #000
+		font-size 14px
+
+
+.m-legend
+	position fixed
+	right 5px
+	top 5px
+	width 200px
+	border 1px solid silver
+	padding 10px
+	font-size 12px
+
+	h1
+		margin 10px 0
+		font-size 14px
+		text-transform uppercase
+
+	&__category
+		border-left 15px solid silver
+		padding-left 10px
+		margin-bottom 5px
