--- a/nesta/css/bubblechart.css
+++ b/nesta/css/bubblechart.css
@@ -11,7 +11,7 @@
 }
 .vis--bubblechart .vis__hints__hint text {
   text-anchor: middle;
-  alignment-baseline: after-edge;
+  alignment-baseline: middle;
   font-size: 12px;
   fill: #000;
 }
