--- a/nesta/styl/bubblechart.styl
+++ b/nesta/styl/bubblechart.styl
@@ -14,7 +14,7 @@
 
 			text
 				text-anchor middle
-				alignment-baseline after-edge
+				alignment-baseline middle
 				font-size 12px
 				fill #000
 
