--- a/nesta/styl/geovis.styl
+++ b/nesta/styl/geovis.styl
@@ -18,6 +18,14 @@
 			stroke-width 2
 			fill none
 			
+	.vis__hint
+		pointer-events none
+		
+		text
+			text-anchor middle
+			font-size 12px
+			alignment-baseline after-edge
+			
 
 .legend
 	position fixed
