--- a/nesta/css/bubblechart.css
+++ b/nesta/css/bubblechart.css
@@ -1,6 +1,38 @@
-.vis--bubblechart .vis__graph__item {
+.vis--bubblechart .vis__graph__bg .vis__graph__item {
   stroke: none;
+  fill: #dcdcdc;
+  opacity: 0.3;
+}
+.vis--bubblechart .vis__graph__bg .vis__graph__item.selected {
+  visibility: hidden;
+}
+.vis--bubblechart .vis__graph__bg .vis__graph__item.highlighted {
+  visibility: hidden;
+}
+.vis--bubblechart .vis__graph__bg .vis__graph__item.blured {
+  visibility: visible;
+}
+.vis--bubblechart .vis__graph__active .vis__graph__item {
+  stroke: none;
+  fill: #1f77b4;
+  opacity: 0.9;
+  visibility: hidden;
+}
+.vis--bubblechart .vis__graph__active .vis__graph__item.selected {
+  visibility: visible;
+}
+.vis--bubblechart .vis__graph__active .vis__graph__item.highlighted {
+  visibility: visible;
   opacity: 0.5;
+}
+.vis--bubblechart .vis__graph__active .vis__graph__item.highlighted.selected {
+  opacity: 0.9;
+}
+.vis--bubblechart .vis__graph__active .vis__graph__item.blured {
+  visibility: hidden;
+}
+.vis--bubblechart .vis__graph .vis__graph__item.hovered {
+  fill: #f00;
 }
 .vis--bubblechart .axis-label {
   fill: #000;
@@ -9,9 +41,14 @@
 .vis--bubblechart .vis__hints__hint {
   pointer-events: none;
 }
+.vis--bubblechart .vis__hints__hint__bg {
+  stroke: #999;
+  fill: #fff;
+  opacity: 0.8;
+}
 .vis--bubblechart .vis__hints__hint text {
-  text-anchor: middle;
-  alignment-baseline: middle;
+  text-anchor: left;
+  alignment-baseline: before-edge;
   font-size: 12px;
   fill: #000;
 }
@@ -19,7 +56,7 @@
   position: fixed;
   right: 5px;
   top: 5px;
-  width: 200px;
+  width: 270px;
   border: 1px solid #c0c0c0;
   padding: 10px;
   font-size: 12px;
@@ -31,9 +68,8 @@
 }
 .m-legend__category {
   display: block;
-  border-left: 15px solid #c0c0c0;
-  padding-left: 10px;
-  margin: 0 0 5px;
+  padding: 0 0 5px;
+  cursor: pointer;
 }
 .m-legend__category input {
   position: relative;
@@ -44,6 +80,12 @@
   position: relative;
   float: left;
   margin-right: 6px;
+  width: 30px;
+  text-align: center;
+}
+.m-legend__size__sample {
+  position: relative;
   border-radius: 50%;
-  background: #c0c0c0;
+  background: #1f77b4;
+  opacity: 0.9;
 }
