--- a/nesta/styl/heatmap.styl
+++ b/nesta/styl/heatmap.styl
@@ -10,7 +10,15 @@
 				font-weight bold
 				fill #000
 			&.sorting
-				fill #000
+				font-weight bold
+				
+		&__label
+			fill #000
+			font-size 14px
+			
+		&__divider
+			fill none
+			stroke #000
 
 	.vis__graph
 		&__cell
