--- a/nesta/styl/bumpchart.styl
+++ b/nesta/styl/bumpchart.styl
@@ -9,8 +9,13 @@
 
 	.vis__graph
 		&__line
-			fill none
-			stroke-width 2
+			&__line
+				fill none
+				stroke-width 2
+			&__bg
+				fill none
+				stroke rgba(255, 255, 255, 0)
+				stroke-width 7
 
 			&.blured
 				opacity .2
