--- a/nesta/styl/geovis.styl
+++ b/nesta/styl/geovis.styl
@@ -17,7 +17,7 @@
 				fill #eee
 			
 		&__border
-			stroke #999
+			stroke #000
 			stroke-width 2
 			fill none
 			
@@ -33,9 +33,12 @@
 			text-anchor start
 			alignment-baseline before-edge
 			
-			&.vis__hint__city
+		&__city
 				font-weight bold
 				font-size 14px
+				
+		&__employment, &__business
+				font-size 12px
 				
 		&__topic
 			font-size 12px
