--- a/nesta/styl/filter.styl
+++ b/nesta/styl/filter.styl
@@ -34,3 +34,14 @@
 				border-radius 50%
 				background #1f77b4
 				opacity .9
+				
+		&__color-sample
+			position relative
+			float left
+			border-top 15px solid #fff
+			
+			&__tick
+				font-size 10px
+				
+				&--center
+					text-align center
