--- a/nesta/styl/filter.styl
+++ b/nesta/styl/filter.styl
@@ -6,6 +6,7 @@
 	padding 10px
 	background #fff
 	border 1px solid #eee
+	z-index 100
 	
 	&__group
 		font-size 12px
@@ -16,6 +17,9 @@
 			margin 0 0 5px
 			font-size 14px
 			text-transform uppercase
+			
+		select
+			width 200px
 			
 		&__option
 			display block
