--- a/nesta/css/bumpchart.css
+++ b/nesta/css/bumpchart.css
@@ -11,6 +11,9 @@
   font-weight: bold;
   font-size: 12px;
 }
+.vis--bumpchart .vis__graph__line {
+  cursor: pointer;
+}
 .vis--bumpchart .vis__graph__line__line {
   fill: none;
   stroke-width: 2;
