--- a/nesta/css/bumpchart.css
+++ b/nesta/css/bumpchart.css
@@ -40,11 +40,30 @@
 .vis--bumpchart .vis__hints__hint text {
   font-size: 10px;
 }
-.vis--bumpchart .vis__legend__bg {
-  stroke: #444;
-  stroke-width: 1;
+.vis--bumpchart .vis__overview__bg {
   fill: #fff;
+  stroke: #ccc;
 }
-.vis--bumpchart .vis__legend text {
-  font-size: 10px;
+.vis--bumpchart .vis__overview__line {
+  fill: none;
+  stroke-width: 1;
+}
+.vis--bumpchart .vis__overview__line.blured {
+  opacity: 0.1;
+}
+.vis--bumpchart .vis__overview__line.selected {
+  stroke-width: 2;
+}
+.vis--bumpchart .vis__overview__viewport {
+  fill: rgba(255,255,255,0);
+  stroke: #000;
+  stroke-width: 2;
+  cursor: grab;
+  cursor: -moz-grab;
+  cursor: -webkit-grab;
+}
+.vis--bumpchart .vis__overview__title {
+  font-size: 12px;
+  fill: #000;
+  text-anchor: middle;
 }
