--- a/nesta/styl/arcchart.styl
+++ b/nesta/styl/arcchart.styl
@@ -17,6 +17,10 @@
 					fill red
 			
 		&__values
+			&__label
+				fill #000
+				font-size 14px
+
 			&__points
 				&__point
 					cursor pointer
@@ -51,6 +55,9 @@
 					text
 						text-anchor end
 						
+				.vis__graph__values__label
+					text-anchor middle
+						
 			&--right
 				.vis__graph__values__points__point
 					text
@@ -59,6 +66,9 @@
 				.vis__graph__values__arcs__arc
 					text
 						text-anchor start
+						
+				.vis__graph__values__label
+					text-anchor middle
 					
 			&__arcs
 				&__arc
