--- a/nesta/styl/forcegraph.styl
+++ b/nesta/styl/forcegraph.styl
@@ -19,9 +19,7 @@
 				cursor pointer
 				
 				circle
-					fill #fff
-					stroke-width 1
-					stroke #bbb
+					stroke none
 				
 				&.blured
 					opacity .3
