--- a/nesta/css/forcegraph.css
+++ b/nesta/css/forcegraph.css
@@ -4,35 +4,42 @@
   top: 0;
 }
 .vis--forcegraph .vis__graph__links__link {
-  stroke: #323232;
-  opacity: 0.02;
+  stroke: #646464;
+  stroke-width: 0.02;
 }
 .vis--forcegraph .vis__graph__links__link.blured {
-  opacity: 0.01;
+  stroke: #c8c8c8;
 }
 .vis--forcegraph .vis__graph__links__link.selected {
-  opacity: 0.2;
+  stroke-width: 0.1;
 }
 .vis--forcegraph .vis__graph__links__link.muted {
-  opacity: 0.01;
+  stroke: #dcdcdc;
+  stroke-width: 0.01;
 }
 .vis--forcegraph .vis__graph__nodes__node {
   cursor: pointer;
 }
 .vis--forcegraph .vis__graph__nodes__node__bg {
   fill: rgba(255,255,255,0);
-  stroke: 0;
-}
-.vis--forcegraph .vis__graph__nodes__node__circle {
   stroke: none;
 }
+.vis--forcegraph .vis__graph__nodes__node__circle {
+  stroke: #777;
+  stroke-width: 0.5;
+}
 .vis--forcegraph .vis__graph__nodes__node.blured .vis__graph__nodes__node__circle {
+  stroke: none;
   opacity: 0.2;
   fill: #ccc;
 }
+.vis--forcegraph .vis__graph__nodes__node.muted {
+  pointer-events: none;
+}
 .vis--forcegraph .vis__graph__nodes__node.muted .vis__graph__nodes__node__circle {
-  opacity: 0.2;
+  stroke: none;
   fill: #ccc;
+  opacity: 0.2;
 }
 .vis--forcegraph .vis__hint {
   pointer-events: none;
@@ -44,6 +51,19 @@
 .vis--forcegraph .vis__hint text {
   text-anchor: start;
   font-size: 12px;
+}
+.vis--forcegraph .vis__controls__button {
+  cursor: pointer;
+}
+.vis--forcegraph .vis__controls__button__bg {
+  stroke: #ddd;
+  fill: #eee;
+}
+.vis--forcegraph .vis__controls__button text {
+  text-anchor: middle;
+  alignment-baseline: central;
+  font-size: 12px;
+  fill: #000;
 }
 .vis--forcegraph .vis__loader {
   font-size: 18px;
