--- a/nesta/styl/forcegraph.styl
+++ b/nesta/styl/forcegraph.styl
@@ -6,17 +6,18 @@
 	.vis__graph
 		&__links
 			&__link
-				stroke rgb(50, 50, 50)
-				opacity 0.02
+				stroke rgb(100, 100, 100)
+				stroke-width .02
 			
 				&.blured
-					opacity 0.01
+					stroke rgb(200, 200, 200)
 					
 				&.selected
-					opacity .2
+					stroke-width .1
 					
 				&.muted
-					opacity 0.01
+					stroke rgb(220, 220, 220)
+					stroke-width .01
 		
 		&__nodes
 			&__node
@@ -24,20 +25,25 @@
 				
 				&__bg
 					fill rgba(255, 255, 255, 0)
-					stroke 0
+					stroke none
 				
 				&__circle
-					stroke none
+					stroke #777
+					stroke-width .5
 				
 				&.blured
 					.vis__graph__nodes__node__circle
+						stroke none
 						opacity .2
 						fill #ccc
 					
 				&.muted
+					pointer-events none
+					
 					.vis__graph__nodes__node__circle
-						opacity .2
+						stroke none
 						fill #ccc
+						opacity .2
 					
 						
 	.vis__hint
@@ -50,6 +56,19 @@
 		text
 			text-anchor start
 			font-size 12px
+			
+	.vis__controls
+		&__button
+			cursor pointer
+			&__bg
+				stroke #ddd
+				fill #eee
+				
+			text
+				text-anchor middle
+				alignment-baseline central
+				font-size 12px
+				fill #000
 				
 
 	.vis__loader
