--- a/nesta/styl/geovis.styl
+++ b/nesta/styl/geovis.styl
@@ -4,6 +4,10 @@
 	top 0
 	
 	.vis__map
+		&__bg
+			stroke none
+			fill #fff
+
 		&__lads__lad
 			stroke-width 1
 			stroke #fff
@@ -46,6 +50,9 @@
 					
 					.vis__map__connections__line__line
 						stroke #444
+						
+	.vis__divider
+		stroke #eee
 			
 	.vis__hint
 		pointer-events none
