--- a/nesta/styl/geovis.styl
+++ b/nesta/styl/geovis.styl
@@ -21,10 +21,10 @@
 				fill #eee
 				
 			&.hovered
-				fill #ffeda0
+				fill #fecc5c
 				
 			&.selected
-				fill #feb24c
+				fill #fd8d3c
 			
 		&__border
 			stroke #000
@@ -33,8 +33,6 @@
 			
 		&__connections
 			&__line
-				cursor pointer
-				
 				&__bg
 					stroke rgba(255, 255, 255, 0);
 					stroke-width 5
@@ -44,12 +42,25 @@
 					stroke-width 1
 					fill none
 					
+				&.highlighted
+					.vis__map__connections__line__line
+						stroke red
+						opacity 1
+					
 				&.blured
-					opacity .1
-					pointer-events none
+					visibility hidden
 					
 					.vis__map__connections__line__line
 						stroke #444
+						
+		&--left
+			.vis__map__lads__lad
+				&.highlighted
+					fill #a5a8ff		
+		&--right
+			.vis__map__lads__lad
+				&.highlighted
+					fill #7fc97e
 						
 	.vis__divider
 		stroke #eee
@@ -79,6 +90,18 @@
 			&.selected
 				font-weight bold
 				fill rgb(200, 0, 0)
+				
+	.vis__map__hints
+		pointer-events none
+		
+		text
+			text-anchor middle
+			alignment-baseline central
+			font-size 12px
+			
+		rect
+			stroke #999
+			fill rgba(255, 255, 255, .7)
 
 	.vis__legend
 		&__bg
