--- a/nesta/css/filter.css
+++ b/nesta/css/filter.css
@@ -52,3 +52,21 @@
 .filter__group__color-sample__tick--center {
   text-align: center;
 }
+.filter__group__samples {
+  margin: 0;
+  padding: 0;
+  border-spacing: 0;
+}
+.filter__group__samples__sample {
+  vertical-align: middle;
+  padding-bottom: 4px;
+}
+.filter__group__samples__desc {
+  vertical-align: middle;
+  padding-left: 5px;
+}
+.filter__group__hint {
+  margin: 5px 0;
+  font-style: italic;
+  color: #888;
+}
