--- a/nesta/styl/filter.styl
+++ b/nesta/styl/filter.styl
@@ -51,3 +51,21 @@
 				
 				&--center
 					text-align center
+					
+		&__samples
+			margin 0
+			padding 0
+			border-spacing 0
+			
+			&__sample
+				vertical-align middle
+				padding-bottom 4px
+				
+			&__desc
+				vertical-align middle
+				padding-left 5px
+				
+		&__hint
+			margin 5px 0
+			font-style italic
+			color #888
