--- a/nesta/styl/filter.styl
+++ b/nesta/styl/filter.styl
@@ -59,13 +59,14 @@
 			
 			&__sample
 				vertical-align middle
-				padding-bottom 4px
+				width 30px
 				
 			&__desc
 				vertical-align middle
 				padding-left 5px
 				
-		&__hint
-			margin 5px 0
-			font-style italic
-			color #888
+				&--hint
+					font-style italic
+					color #888
+					padding-top 4px
+					padding-left 0
