--- a/nesta/styl/forcegraph.styl
+++ b/nesta/styl/forcegraph.styl
@@ -36,6 +36,11 @@
 						stroke none
 						opacity .2
 						fill #ccc
+						
+				&.selected
+					.vis__graph__nodes__node__circle
+						stroke-width 2
+						stroke #000
 					
 				&.muted
 					pointer-events none
